// Copyright (c) 2023 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.protocol.v2;

import "com/digitalasset/canton/protocol/v0/common.proto";
import "com/digitalasset/canton/protocol/v1/mediator_response.proto";
import "google/protobuf/timestamp.proto";
import "google/rpc/status.proto";
import "scalapb/scalapb.proto";

message ParticipantReject {
  repeated RejectionReason reasons = 1; // new version
}

message RejectionReason {
  repeated string parties = 1;
  com.digitalasset.canton.protocol.v1.LocalReject reject = 2; // Using v1.LocalReject instead of v0.LocalReject
}

message MediatorReject {
  google.rpc.Status reason = 1; // Must not be OK
}

message MalformedMediatorRequestResult {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.UnstableProtoVersion";

  google.protobuf.Timestamp request_id = 1;
  string domain_id = 2;
  com.digitalasset.canton.protocol.v0.ViewType view_type = 3;
  MediatorReject rejection = 4; // v1.MediatorReject -> v2.MediatorReject
}
